src/objects/Plan__c.object
<CustomObject>
    <description>INTERACTIONS: An object for housing recruitment and academic interest records.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIP_Code__c</fullName>
        <label>CIP Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <description>INTERACTIONS: The Career that the record belongs to (Ex: Undergraduate).</description>
        <inlineHelpText>Select a Career for the record.</inlineHelpText>
        <label>Career</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>INTERACTIONS: The Degree of the record (Ex: BS, BA, etc.).</description>
        <inlineHelpText>Select a Degree for the record.</inlineHelpText>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTERACTIONS: A lookup to Account to connect the record to the Account hierarchy for departments, schools, and/or colleges. Filter criteria of Record Type = University Department.</description>
        <inlineHelpText>Enter the departmental account (i.e. School of Business) this record belongs to.</inlineHelpText>
        <label>Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>University Department</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plans</relationshipLabel>
        <relationshipName>Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <description>INTERACTIONS: An external ID that represents this recruitment or academic interest for use in integrations.</description>
        <externalId>true</externalId>
        <label>Plan Code</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <description>INTERACTIONS: The type of Plan such as a Major, Minor, etc.</description>
        <inlineHelpText>Select a Plan Type for the Plan.</inlineHelpText>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recruitment_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTERACTIONS: An internal lookup filtered by Record Type = Recruitment to connect Academic Interest records to a Recruitment Interest record. This field only appears in the Academic Interest page layout.</description>
        <inlineHelpText>Enter the Recruitment Interest related to the Academic Interest.</inlineHelpText>
        <label>Recruitment Interest</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Plan__c.Type__c</field>
                <operation>equals</operation>
                <value>Recruitment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Recruitment Interests</relationshipLabel>
        <relationshipName>Academic_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>INTERACTIONS: Tracks whether it is a recruitment or academic record for use in lookup filters on Lead, Opportunity, Interaction, and Plan. If record types are created, the lookup filters could be updated and this field would no longer be needed.</description>
        <inlineHelpText>Track whether it is a recruitment or academic record for use in lookup filters on Lead, Opportunity, Interaction, and Plan.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Academic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan</label>
    <listViews>
        <fullName>Academic_Interests</fullName>
        <columns>NAME</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <columns>Active__c</columns>
        <columns>Plan_Code__c</columns>
        <columns>Recruitment_Interest__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Academic</value>
        </filters>
        <label>Academic Interests</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Degree__c</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <columns>Recruitment_Interest__c</columns>
        <columns>Plan_Code__c</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recruitment_Interests</fullName>
        <columns>NAME</columns>
        <columns>Career__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Recruitment</value>
        </filters>
        <label>Recruitment Interests</label>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>